@@ -93,10 +93,10 @@ SimpleProbing<REAL>::execute( const Problem<REAL>& problem,
    int nrows = problem.getNRows();
 
 #ifndef PAPILO_TBB
-   assert( problemUpdate.getPresolveOptions().runs_sequentiell() );
+   assert( problemUpdate.getPresolveOptions().runs_sequential() );
 #endif
 
-   if( problemUpdate.getPresolveOptions().runs_sequentiell() ||
+   if( problemUpdate.getPresolveOptions().runs_sequential() ||
        !problemUpdate.getPresolveOptions().simple_probing_parallel )
    {
       for( int i = 0; i < nrows; ++i )
