@@ -10,6 +10,7 @@ Performance improvements
 ------------------------
 
 - ParallelCol: reducing the amount of redundant transactions in case of multiple parallel integer columns
+- SequentialMode: execute functions like trivialPresolve only once per round and not after every presolver
 
 Interface changes
 -----------------
